k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reddit-back
  namespace: reddit-back
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: reddit-back

  template:
    metadata:
      labels:
        app: reddit-back

    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000

      containers:
        - name: backend
          image: 201937184629.dkr.ecr.us-east-1.amazonaws.com/reddit-backend:e7335ad
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8000

          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          livenessProbe:
            httpGet:
              path: /health/
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health/
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
