k8s/backend/httproute.yaml
# Backend routes are separated from frontend routes
# to clearly isolate API/admin/static traffic.

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reddit-backend-route
  namespace: reddit-gateway
spec:
  parentRefs:
    - name: reddit-gateway
      sectionName: https

  hostnames:
    - www.abdallahfekry.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: reddit-backend-service
          namespace: reddit-back
          port: 8000

    - matches:
        - path:
            type: PathPrefix
            value: /admin
      backendRefs:
        - name: reddit-backend-service
          namespace: reddit-back
          port: 8000

    - matches:
        - path:
            type: PathPrefix
            value: /static
      backendRefs:
        - name: reddit-backend-service
          namespace: reddit-back
          port: 8000

    - matches:
        - path:
            type: PathPrefix
            value: /media
      backendRefs:
        - name: reddit-backend-service
          namespace: reddit-back
          port: 8000
